--- a/main.html
+++ b/main.html
@@ -3,7 +3,22 @@
     <title>AccioJob Iframe</title>
   </head>
   <body>
-	     <iframe src="https://acciojob.com/" class="accio-frame"></iframe>
-    <!-- Write your code here -->
+	     <!DOCTYPE html>
+<html lang="en">
+<head>
+    <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+
+    <iframe 
+        src="https://acciojob.com/" 
+        width="800px" 
+        height="600px">
+    </iframe>
+
+</body>
+</html>
+
   </body>
 </html>
